--- a/android/Facebook/build.gradle
+++ b/android/Facebook/build.gradle
@@ -22,6 +22,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:20+'
-    compile files('libs/bolts.jar')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
