Change Facebook lib location

--- a/plugin.xml
+++ b/plugin.xml
@@ -87,7 +87,7 @@
     <source-file src="android/com/fiftyfive/fiftaghandler/MobileAppTracker.jar" target-dir="libs" />
     <source-file src="android/com/fiftyfive/fiftaghandler/version.xml" target-dir="res/values" />
 
-    <framework src="android/Facebook" custom="true" />
+    <framework src="android/Facebook" custom="true" target-dir="./" />
 
     <proguard-config>
 -keep class * extends java.util.ListResourceBundle {
