--- a/plugin.xml
+++ b/plugin.xml
@@ -78,14 +78,14 @@
       <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     </config-file>
 
-    <resource-file src="android/com/fiftyfive/fiftaghandler/fiftaghandler.properties" target="res/raw/fiftaghandler.properties" />
-    <resource-file src="android/com/fiftyfive/fiftaghandler/gtm_default_container" target="res/raw/gtm_default_container" />
+    <resource-file src="android/fiftaghandler.properties" target="res/raw/fiftaghandler.properties" />
+    <resource-file src="android/gtm_default_container" target="res/raw/gtm_default_container" />
 
-    <source-file src="android/com/fiftyfive/fiftaghandler/FIFTagHandlerPlugin.java" target-dir="src/com/fiftyfive/fiftaghandler/" />
-    <source-file src="android/com/fiftyfive/fiftaghandler/google-play-services.jar" target-dir="libs" />
-    <source-file src="android/com/fiftyfive/fiftaghandler/FIFTagHandler.jar" target-dir="libs" />
-    <source-file src="android/com/fiftyfive/fiftaghandler/MobileAppTracker.jar" target-dir="libs" />
-    <source-file src="android/com/fiftyfive/fiftaghandler/version.xml" target-dir="res/values" />
+    <source-file src="android/FIFTagHandlerPlugin.java" target-dir="src/com/fiftyfive/fiftaghandler/" />
+    <source-file src="android/google-play-services.jar" target-dir="libs" />
+    <source-file src="android/FIFTagHandler.jar" target-dir="libs" />
+    <source-file src="android/MobileAppTracker.jar" target-dir="libs" />
+    <source-file src="android/version.xml" target-dir="res/values" />
 
     <framework src="android/Facebook" custom="true" target-dir="./" />
 
