--- a/plugin.xml
+++ b/plugin.xml
@@ -65,7 +65,7 @@
   <platform name="android">
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="FIFTagHandler">
-        <param name="android-package" value="com.fiftyfive.fiftaghandler.FIFTagHandlerPlugin" />
+        <param name="android-package" value="FIFTagHandlerPlugin" />
       </feature>
     </config-file>
 
