--- a/plugin.xml
+++ b/plugin.xml
@@ -78,7 +78,7 @@
       <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     </config-file>
 
-    <resource-file src="android/fiftaghandler_properties" target="res/raw/fiftaghandler_properties" />
+    <resource-file src="android/fiftaghandler.properties" target="res/raw/fiftaghandler.properties" />
     <resource-file src="android/gtm_default_container" target="res/raw/gtm_default_container" />
 
     <source-file src="android/FIFTagHandlerPlugin.java" target-dir="src/com/fiftyfive/fiftaghandler/" />
