--- a/plugin.xml
+++ b/plugin.xml
@@ -85,6 +85,7 @@
     <source-file src="android/google-play-services.jar" target-dir="libs" />
     <source-file src="android/FIFTagHandler.jar" target-dir="libs" />
     <source-file src="android/MobileAppTracker.jar" target-dir="libs" />
+    <source-file src="android/facebook.jar" target-dir="libs" />
     <source-file src="android/version.xml" target-dir="res/values" />
 
     <proguard-config>
