--- a/plugin.xml
+++ b/plugin.xml
@@ -86,6 +86,8 @@
     <source-file src="android/FIFTagHandler.jar" target-dir="libs" />
     <source-file src="android/MobileAppTracker.jar" target-dir="libs" />
     <source-file src="android/facebook.jar" target-dir="libs" />
+    <source-file src="android/bolts.jar" target-dir="libs" />
+    <source-file src="android/android-support-v4.jar" target-dir="libs" />
     <source-file src="android/version.xml" target-dir="res/values" />
 
     <proguard-config>
